<resources>
    <string name="app_name">Activity2</string>
    <string name="action_settings">Settings</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="gmale">Male</string>
    <string name="gfemale">Female</string>
    <string name="address">Address</string>
    <string name="married">married</string>
    <string name="single">single</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_activity_married">married</string>
    <string name="spouseName">Spouse Name:</string>
    <string name="title_activity_single">single</string>
    <string name="guardianName">Guardian Name</string>
    <string name="relation">Relation</string>
    <string name="title_activity_education">education</string>
    <string name="elementary">Elementary</string>
    <string name="highSchool">High School</string>
    <string name="college">College</string>
    <string name="title_activity_languages">languages</string>
    <string name="language">Language</string>
    <string name="title_activity_finish">Finish</string>
    <string name="sgName">Spouse/Guardian Name</string>
    <string name="sgAddress">Spouse/Guardian Address</string>
</resources>
